--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('prism-dracula.css');
+@import url("prism-dracula.css");
 
 @layer base {
   :root {
@@ -15,7 +15,7 @@
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
 
-    --primary: #487CA5;
+    --primary: #487ca5;
     --primary-foreground: 210 40% 98%;
 
     --secondary: #162240;
@@ -27,35 +27,35 @@
 
     --ddd: #ddd;
 
-    --color-default-light: #FFFFFF;
+    --color-default-light: #ffffff;
     --color-default-dark: #373530;
 
-    --color-gray-light: #F1F1EF;
+    --color-gray-light: #f1f1ef;
     --color-gray-dark: #787774;
 
-    --color-brown-light: #F3EEEE;
-    --color-brown-dark: #976D57;
+    --color-brown-light: #f3eeee;
+    --color-brown-dark: #976d57;
 
-    --color-orange-light: #F8ECDF;
-    --color-orange-dark: #CC782F;
+    --color-orange-light: #f8ecdf;
+    --color-orange-dark: #cc782f;
 
-    --color-yellow-light: #FAF3DD;
-    --color-yellow-dark: #C29343;
+    --color-yellow-light: #faf3dd;
+    --color-yellow-dark: #c29343;
 
-    --color-green-light: #EEF3ED;
+    --color-green-light: #eef3ed;
     --color-green-dark: #548164;
 
-    --color-blue-light: #E9F3F7;
-    --color-blue-dark: #487CA5;
+    --color-blue-light: #e9f3f7;
+    --color-blue-dark: #487ca5;
 
-    --color-purple-light: #F6F3F8;
-    --color-purple-dark: #8A67AB;
+    --color-purple-light: #f6f3f8;
+    --color-purple-dark: #8a67ab;
 
-    --color-pink-light: #F9F2F5;
-    --color-pink-dark: #B35488;
+    --color-pink-light: #f9f2f5;
+    --color-pink-dark: #b35488;
 
-    --color-red-light: #FAECEC;
-    --color-red-dark: #C4554D;
+    --color-red-light: #faecec;
+    --color-red-dark: #c4554d;
   }
 }
 
@@ -101,5 +101,21 @@
     clip: rect(0, 0, 0, 0);
     white-space: nowrap;
     border: 0;
+  }
+}
+
+@layer components {
+  .wavy-underline {
+    @apply relative inline-block;
+  }
+
+  .wavy-underline::after {
+    content: "";
+    @apply absolute left-0 bottom-[-2px] w-full h-3;
+    background: linear-gradient(90deg, #3b82f6, #8b5cf6);
+    -webkit-mask-image: url("data:image/svg+xml,%3Csvg width='100%' viewBox='0 0 100 10' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 5 C 20 2, 40 8, 60 5 S 80 2, 100 5' fill='none' stroke='black' stroke-width='2'/%3E%3C/svg%3E");
+    mask-image: url("data:image/svg+xml,%3Csvg width='100%' viewBox='0 0 100 10' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 5 C 20 2, 40 8, 60 5 S 80 2, 100 5' fill='none' stroke='black' stroke-width='2'/%3E%3C/svg%3E");
+    mask-size: 100% 100%;
+    mask-repeat: repeat-x;
   }
 }
